--- a/.github/workflows/deploy-ovh.yml
+++ b/.github/workflows/deploy-ovh.yml
@@ -25,6 +25,5 @@ jobs:
         lftp -e "
           open $FTP_SERVER
           user $FTP_USERNAME $FTP_PASSWORD
-          mirror --reverse --delete --verbose . /path/to/remote/directory
-          bye
+          mirror --reverse --delete --verbose --exclude-glob .git/ . /www/
         "
