--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,18 @@
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteBase /www/
-  RewriteRule ^index\.html$ - [L]
+  RewriteBase /
+  
+  # Ne pas rediriger les fichiers et dossiers existants
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
+  
+  # Rediriger toutes les autres requêtes vers index.html
+  RewriteRule ^(.*)$ index.html [QSA,L]
+</IfModule>
+
+# Activer CORS pour l'API WordPress
+<IfModule mod_headers.c>
+  Header set Access-Control-Allow-Origin "*"
+  Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+  Header set Access-Control-Allow-Headers "Content-Type"
 </IfModule>
