--- a/.github/workflows/deploy-ovh.yml
+++ b/.github/workflows/deploy-ovh.yml
@@ -34,6 +34,6 @@ jobs:
         lftp -e "
           open $FTP_SERVER
           user $FTP_USERNAME $FTP_PASSWORD
-          mirror --reverse --delete --verbose --exclude .git/ dist/ /www/
+          mirror --reverse --delete --verbose --exclude .git/ dist/ /
           bye
         "
