--- a/.github/workflows/deploy-ovh.yml
+++ b/.github/workflows/deploy-ovh.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Build application
       run: npm run build
 
+    - name: Copy .htaccess
+      run: cp .htaccess dist/
+
     - name: Upload to OVH
       env:
         FTP_SERVER: ${{ secrets.FTP_SERVER }}
